src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  background-color: #131313;
  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  color: #FFF;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  z-index: -10;
  overflow: auto;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.login-panel{
  display: inline-block;
  margin: 50px;
}

.button {
  text-align: center;
  transition: 0.5s;
  background-size: 200% auto;
  color: white;
  border-radius: 10px;
  display: block;
  border: 0;
  font-weight: 700;
  box-shadow: 0 0 14px -7px #f09819;
}

.logout-btn {
  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
  margin-left: 10px;
  padding: 5px;
}
.logout-btn:hover {
  background-position: right center;
  color: #fff;
  text-decoration: none;
}
.logout-btn:active {
  transform: scale(0.95);
}

.login-btn {
  width: 100%;
  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
  margin: 0 auto;
  padding: 15px 30px;
}
.login-btn:hover {
  background-position: right center;
  color: #fff;
  text-decoration: none;
}
.logout-btn:active {
  transform: scale(0.95);
}

.text_field {
  color: #F09819;
  border: 2px solid #FF512F;
  border-radius: 10px;
  padding: 10px 25px;
  background: transparent;
  margin-bottom: 10px;
}

.settings-btn {
  width: 100%;
  background-image: linear-gradient(45deg, #fe934c 0%, #fc686f  51%, #fe934c  100%);
  margin: 0 auto;
  padding: 15px 30px;
}
.settings-panel{
  margin-left: auto;
  margin-right: auto;
  margin-top: 50px;
}

.navbar {
  display: flex;
  background-color: black;
}

.navbar-title {
  font-family: "Roboto", ui-rounded;
  padding: 4px;
  text-align: left;
}

.navbar-items {
  position: relative;
  flex: auto;
}

.navbar-btn {
  color: #FFFFFF;
  font-family: "Roboto", ui-rounded;
  text-decoration: none;
}

.navbar_item {
  flex: available;
  padding: 10px;
  align-self: center;
  size: auto;
}
.navbar_item:first-child {
  margin-left: 5%;
}
.navbar_item:nth-last-child(1) {
  position: absolute;
  right: 0;
  margin-right: 5%;
}

.logo {
  color: #FFFFFF;
  font-family: "Roboto", ui-rounded;
  text-decoration: none;
}

.row_item img {
  display: block;
  overflow: hidden;
}

.browse_container {
  display: inline;
  z-index: -10;
  height: 100%;
  background-color: #131313;
}

.row_item {
  position: relative;
  padding: 2px;
  flex: 1 1 0;
  transition: all 450ms;
  left: 1px;
}

.browse_container .row_item:focus,
.browse_container .row_item:hover {
  transform: scale(1.5);
  z-index: 100;
}

[id^="itemInRowId1-"] {
  transform-origin: left;
}

.arrow {
  z-index: 101;
  overflow: hidden;
}

.slider {
  overflow: visible;
}

.carousel_row {
  overflow-x: visible;
  overflow-y: visible;
}

.youtube-container {
  left: 0;
  top: 0;
  width: 100%;
  height: auto;
  position: absolute;
  overflow: hidden;
  aspect-ratio: 16/9;
  pointer-events: none;
}

.youtube-container iframe {
  width: 300%;
  height: 100%;
  margin-left: -100%;
  overflow: hidden;
}

.profile_overview {
  flex-direction: column;
}

